<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Dock</string>
    <string name="title_ship_detail">Ship Detail</string>

    <!-- Labels for configuration slots in each ship -->
    <string name="captain_slot">Captain</string>
    <string name="ship_slot">Ship</string>
    <string name="crew_slot">Crew</string>
    <string name="weapon_slot">Weaponry</string>
    <string name="tech_slot">Tech</string>
    <string name="talent_slot">Talent</string>

    <string name="add_ship">Add ship</string>
    <string name="clear_upgrade_slot">Clear upgrade slot</string>
    <string name="empty_upgrade_slot">EMPTY SLOT</string>

    <string name="indicator_not_applicable">-</string>
    <string name="indicator_unique">*</string>

    <string name="title_activity_top_menu">Space Dock</string>
    <string name="squads">Squads</string>
    <string name="ships">Ships</string>
    <string name="crew">Crew</string>
    <string name="captains">Captains</string>
    <string name="talents">Talents</string>
    <string name="tech">Tech</string>
    <string name="weapons">Weapons</string>
    <string name="resources">Resources</string>
    <string name="flagships">Flagships</string>
    <string name="sets">Sets</string>
    <string name="title_activity_captains_list">Captains</string>
    <string name="skill">Skill</string>
    <string name="title">Title</string>
    <string name="cost">Cost</string>
    <string name="title_activity_captain_detail">Captain Dunsel</string>
    <string name="title_activity_crew_list">Crew</string>
    <string name="title_activity_ships_list">Ships</string>
    <string name="title_activity_resource_list">Resources</string>
    <string name="title_activity_weapon_list">Weapons</string>
    <string name="title_activity_set_list">Sets</string>
    <string name="title_activity_flagship_list">Flagships</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_create_squad">Create Squad</string>
    <string name="menu_share_squad">Share Squad</string>
    <string name="menu_edit_squad">Edit Squad</string>

    <string name="dialog_request_squad_name">Squad Name</string>
    <string name="dialog_accept">OK</string>
    <string name="dialog_reject">Cancel</string>

    <string name="title_settings">Settings</string>
    <string name="pref_title_show_item_details">Show item details</string>
    <string name="pref_summary_show_item_details">Display as much item info as possible in lists.</string>
    <string name="pref_title_set_selection">Select enabled sets</string>
    <string name="pref_summary_set_selection">Only items from the selected sets are shown in the app.</string>

    <!-- Action bar navigation spinner-->
    <string-array name="action_spinner_list">
        <item>Browse</item>
        <item>Build</item>
    </string-array>
    
    <!-- List displayed in the Browse fragment so that the pluralization is correct and they are in the same order as other versions of Space Dock -->
    <string-array name="browse_items_list">
        <item>Ships</item>
        <item>Captains</item>
        <item>Crew</item>
        <item>Talents</item>
        <item>Tech</item>
        <item>Weapons</item>
        <item>Resources</item>
        <item>Flagships</item>
   </string-array>
    <string-array name="empty"/>
</resources>
