<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/captains_list_scroller"
    android:layout_width="match_parent"
    android:scrollbars="vertical|none"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".TopMenuActivity" >

        <Button
            android:id="@+id/squads_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/squads" />

        <Button
            android:id="@+id/ships_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ships" />

        <Button
            android:id="@+id/captains_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/captains" />

        <Button
            android:id="@+id/crew_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/crew" />

        <Button
            android:id="@+id/talents_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/talents" />

        <Button
            android:id="@+id/tech_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tech" />

        <Button
            android:id="@+id/weapons_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weapons" />

        <Button
            android:id="@+id/resources_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resources" />

        <Button
            android:id="@+id/flagships_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/flagships" />

        <Button
            android:id="@+id/sets_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sets" />
    </LinearLayout>

</ScrollView>
